--- a/resources/hero.html
+++ b/resources/hero.html
@@ -10,12 +10,13 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <meta name="theme-color" content="#ffffff" />
 
-        <link rel="icon" href="/media/icons/favicon5.png">
+        <link rel="icon" href="https://www.rpgpowerforge.com/media/icons/favicon5.png">
+        
         <!-- Fonts -->
-        <link rel="stylesheet" href="fonts/fonts.css">
+        <link rel="stylesheet" href="https://www.rpgpowerforge.com/custom-font/OpenSans/fonts.css">
 
         <!-- Custom theme stylesheets -->
-        <link rel="stylesheet" href="custom-css/hero.css">
+        <link rel="stylesheet" href="https://www.rpgpowerforge.com/custom-css/hero.css">
     </head>
     <body>
         <div class="device-desktop">
