--- a/resources/hero.html
+++ b/resources/hero.html
@@ -6,12 +6,14 @@
         <title>RPG Power Forge</title>
         <!-- Custom HTML head -->
         <meta content="text/html; charset=utf-8" http-equiv="Content-Type">
-        <meta name="description" content="The Unity package to create RPG">
+        <meta name="description" content="Create your next RPG with Power Forge. No coding required and a ton of game assets included.">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <meta name="theme-color" content="#ffffff" />
-
-        <link rel="icon" href="https://www.rpgpowerforge.com/media/icons/favicon5.png">
+        <meta name="theme-color" content="#000000" />
         
+        <link rel="shortcut icon" href="https://www.rpgpowerforge.com/media/icons/32x32.png" sizes="32x32" type="image/png">
+        <link rel="icon" href="https://www.rpgpowerforge.com/media/icons/32x32.png" sizes="32x32" type="image/png">
+        <link rel="icon" href="https://www.rpgpowerforge.com/media/icons/16x16.png" sizes="16x16" type="image/png">
+
         <!-- Fonts -->
         <link rel="stylesheet" href="https://www.rpgpowerforge.com/custom-font/OpenSans/fonts.css">
 
