--- a/resources/hero.html
+++ b/resources/hero.html
@@ -10,7 +10,10 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <meta name="theme-color" content="#000000" />
         
-        <link rel="shortcut icon" href="https://www.rpgpowerforge.com/media/icons/32x32.png" sizes="32x32" type="image/png">
+        <link rel="shortcut icon" href="https://www.rpgpowerforge.com/media/icons/icon.svg" type="image/svg+xml">
+
+        <link rel="icon" href="https://www.rpgpowerforge.com/media/icons/icon.svg"  type="image/svg+xml">
+        <link rel="icon" href="https://www.rpgpowerforge.com/media/icons/64x64.png" sizes="64x64" type="image/png">
         <link rel="icon" href="https://www.rpgpowerforge.com/media/icons/32x32.png" sizes="32x32" type="image/png">
         <link rel="icon" href="https://www.rpgpowerforge.com/media/icons/16x16.png" sizes="16x16" type="image/png">
 
